# grabette-data

./: README.md  pyproject.toml
config/: quest_to_camera_calibration.json  rpi_bmi088_slam_settings.yaml
grabette_data/: dataset.py  imu.py  mask.py  slam.py  trajectory.py  video.py
scripts/: batch_slam.py  batch_transform_quest.py  calibrate_camera.py  calibrate_camera_opencv.py  check_calibration.py  check_dataset.py  check_sync.py  check_trajectory.py  compare_trajectories.py  create_map.py  create_quest_trajectory.py  generate_dataset.py  push_to_hub.py  transform_quest_trajectory.py  visualize_trajectory.py
